--- a/whoami/index.html
+++ b/whoami/index.html
@@ -3,7 +3,7 @@
 <title>Vaibh@v BLOG</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="css/style2.css">
+<link rel="stylesheet" href="../css/style.css">
 <link rel="icon" href="/images/spyware.png" type="image/x-icon">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu+Mono&display=swap">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 
 <style>
   body {
@@ -22,7 +23,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
     <div class="container-fluid ">
-      <a class="bar text-white " href="https://everythin.me/index">root@Vaibh@v:~</a>
+      <a id="logo" class="bar text-white " href="https://everythin.me/index">root@Vaibh@v:~</a>
       <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbar-nav"
         aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon "></span>
@@ -30,13 +31,13 @@
       <div class="collapse navbar-collapse" id="navbar-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link  text-danger " href="index.html">Home</a>
+            <a class="nav-link" href="https://everythin.me/index">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="E:\1 Coding Trials\Websites\curious\whoami\index.html">Whoami</a>
+            <a class="nav-link text-success " href="https://everythin.me/whoami">Whoami</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://everythin.me">Web Series</a>
+            <a class="nav-link" href="https://everythin.me/digitalpress.blog">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://everythin.me/resources">Resources</a>
@@ -46,10 +47,27 @@
     </div>
   </nav>
 
-
-  <div class="header1 index center">
-    <p>Hi ,<br>I Am Vaibh@v </p>
-    <p class="header2"></p>
+  <div class="container">
+    <div class="center">
+      <div class="row d-flex flex-wrap align-items-center">
+        <div class="col-md-5">
+          <img class="image img-fluid" src="/images/mine1.jpg" alt="Alien0ne">
+        </div>
+        <div class="col-md">
+          <p class="header1">Vaibha@v</p>
+          <p class="header3">Vaibhav Madaan</p>
+          <p class="header2">Vella Aadmi / Developer / Student</p>
+          <a class="link1" href="https://www.instagram.com/madaanvaibhav07/" data-toggle="tooltip"
+            data-placement="bottom" title="Instagram"><i class="fab fa-instagram"></i></a>
+          <a class="link1" href="https://github.com/madaanvaibhav" data-toggle="tooltip" data-placement="bottom"
+            title="Github"><i class="fab fa-github"></i></a>
+          <a class="link1" href="mailto:alienone988@gmail.com" data-toggle="tooltip" data-placement="bottom"
+            title="mail"><i class="far fa-envelope"></i></a>
+          <a class="link1" href="AlienOne#4919" data-toggle="tooltip" data-placement="bottom" title="Discord"><i
+              class="fab fa-discord"></i></a>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -61,10 +79,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <script type="text/javascript" color="220,20,60" opacity='1' zIndex="-2" count="200"
+  <script type="text/javascript" color="143, 252, 33" opacity='1' zIndex="-2" count="200"
     src="E:\1 Coding Trials\Websites\curious\js\canvas-nest.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1635484769474941"
-     crossorigin="anonymous"></script>
 
 </body>
 
