--- a/webseries/index.html
+++ b/webseries/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Vaibh@v BLOG</title>
+<title>VAIBH@V BLOG</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="css/style2.css">
-<link rel="icon" href="/images/spyware.png" type="image/x-icon">
+<link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
@@ -12,6 +11,10 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu+Mono&display=swap">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
+
+
 
 <style>
   body {
@@ -22,7 +25,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
     <div class="container-fluid ">
-      <a class="bar text-white " href="https://madaanvaibhav.github.io/curious/index.html">root@Vaibh@v:~</a>
+      <a class="bar text-white " href="https://everythin.me/index">root@Vaibh@v:~</a>
       <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbar-nav"
         aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon "></span>
@@ -30,16 +33,16 @@
       <div class="collapse navbar-collapse" id="navbar-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link  text-danger " href="https://madaanvaibhav.github.io/curious/index.html">Home</a>
+            <a class="nav-link" href="https://everythin.me/index">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/index.html">Whoami</a>
+            <a class="nav-link" href="https://everythin.me/whoami">Whoami</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/">Web Series</a>
+            <a class="nav-link" href="https://everythin.me/webseries">Web Series</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/resources">Subtitles</a>
+            <a class="nav-link" href="https://everythin.me/resources">Subtitles</a>
           </li>
         </ul>
       </div>
@@ -47,25 +50,29 @@
   </nav>
 
 
-  <div class="header1 index center">
-    <p>Hi ,<br>I Am Vaibh@v </p>
-    <p class="header2"></p>
-  </div>
+  <section class="underconstruction center ">
+    <div class="header3">
+      <a href="/webseries/moneyheist/index.html"><p class="header3">Money Heist</p></a>
+    </div>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript" color="220,20,60" opacity='1' zIndex="-2" count="200"
-    src="/js/canvas-nest.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1635484769474941"
-     crossorigin="anonymous"></script>
+         <br> <p>  </p><br><br>
+         
+    <section class="underconstruction center ">
+        <div class="header4">
+          <a href="/webseries/loki/index.html"><p class="header4">LOKI</p></a>
+        </div>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" color="143, 252, 33" opacity='1' zIndex="-2" count="200"
+      src="/js/canvas-nest.js"></script>
 </body>
 
 </html>
