--- a/whoami/index.html
+++ b/whoami/index.html
@@ -31,16 +31,16 @@
       <div class="collapse navbar-collapse" id="navbar-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="https://everythin.me/index">Home</a>
+            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/index">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success " href="https://everythin.me/whoami">Whoami</a>
+            <a class="nav-link text-success " href="https://madaanvaibhav.github.io/curious/whoami">Whoami</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://everythin.me/digitalpress.blog">Blog</a>
+            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/webseries">Web Series</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://everythin.me/resources">Resources</a>
+            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/resources">Subtitles</a>
           </li>
         </ul>
       </div>
@@ -80,7 +80,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <script type="text/javascript" color="143, 252, 33" opacity='1' zIndex="-2" count="200"
-    src="E:\1 Coding Trials\Websites\curious\js\canvas-nest.js"></script>
+    src="/js/canvas-nest.js"></script>
 
 </body>
 
