--- a/whoami/index.html
+++ b/whoami/index.html
@@ -31,16 +31,18 @@
       <div class="collapse navbar-collapse" id="navbar-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/index">Home</a>
+            <a class="nav-link" href="https://everythin.me/index">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success " href="https://madaanvaibhav.github.io/curious/whoami">Whoami</a>
+            <a class="nav-link text-success " href="https://everythin.me/whoami">Whoami</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/webseries">Web Series</a>
+            <a class="nav-link" href="https://everythin.me/webseries">Web Series</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/resources">Subtitles</a>
+            <a class="nav-link" href="https://everythin.me/resources">Subtitles
+            
+            </a>
           </li>
         </ul>
       </div>
