--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
     <div class="container-fluid ">
-      <a class="bar text-white " href="https://madaanvaibhav.github.io/curious/index.html">root@Vaibh@v:~</a>
+      <a class="bar text-white " href="https://everythin.me/index.html">root@Vaibh@v:~</a>
       <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbar-nav"
         aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon "></span>
@@ -30,16 +30,16 @@
       <div class="collapse navbar-collapse" id="navbar-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link  text-danger " href="https://madaanvaibhav.github.io/curious/index.html">Home</a>
+            <a class="nav-link  text-danger " href="https://everythin.me/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/index.html">Whoami</a>
+            <a class="nav-link" href="https://everythin.me/whoami/index.html">Whoami</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/">Web Series</a>
+            <a class="nav-link" href="https://everythin.me/webseries/index.html">Web Series</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://madaanvaibhav.github.io/curious/resources">Subtitles</a>
+            <a class="nav-link" href="https://everythin.me/resources">Subtitles</a>
           </li>
         </ul>
       </div>
