--- a/whoami/index.html
+++ b/whoami/index.html
@@ -40,9 +40,7 @@
             <a class="nav-link" href="https://everythin.me/webseries">Web Series</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://everythin.me/resources">Subtitles
-            
-            </a>
+            <a class="nav-link" href="https://everythin.me/resources">Subtitles</a>
           </li>
         </ul>
       </div>
