--- a/webseries/moneyheist/index.html
+++ b/webseries/moneyheist/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Everythin</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/css/-Countdown-BS4-.css">
-    <link rel="stylesheet" href="assets/css/Animated-CSS-Waves-Background-SVG.css">
-    <link rel="stylesheet" href="assets/css/Animated-rainbow-shadow.css">
-    <link rel="stylesheet" href="assets/css/Article-Dual-Column.css">
-    <link rel="stylesheet" href="assets/css/Article-List.css">
-    <link rel="stylesheet" href="assets/css/html5-video.css">
+    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="/assets/css/-Countdown-BS4-.css">
+    <link rel="stylesheet" href="/assets/css/Animated-CSS-Waves-Background-SVG.css">
+    <link rel="stylesheet" href="/assets/css/Animated-rainbow-shadow.css">
+    <link rel="stylesheet" href="/assets/css/Article-Dual-Column.css">
+    <link rel="stylesheet" href="/assets/css/Article-List.css">
+    <link rel="stylesheet" href="/assets/css/html5-video.css">
 </head>
 
 <body>
@@ -26,35 +26,35 @@
                 <p class="text-center">Watch all Seasons of Money Heist in UHD Quality</p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="seasons/seasonone.html"><img class="img-fluid" src="assets/img/LCDPP.gif"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="/webseries/moneyheist/season1/index.html"><img class="img-fluid" src="/assets/img/LCDPP.gif"></a>
                     <h3 class="name">Season 1</h3>
-                    <p class="description">Download or Watch&nbsp; Online :)</p><a class="action" href="seasons/seasonone.html"><i class="fa fa-arrow-circle-right"></i></a>
+                    <p class="description">Download or Watch&nbsp; Online :)</p><a class="action" href="/webseries/moneyheist/season1/index.html"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="seasons/seasonetwo.html"><img class="img-fluid" src="assets/img/LCDPP2.gif"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="/webseries/moneyheist/season2/index.html"><img class="img-fluid" src="/assets/img/LCDPP2.gif"></a>
                     <h3 class="name">Season 2</h3>
-                    <p class="description">Download or Watch Online :)</p><a class="action" href="seasons/seasonetwo.html"><i class="fa fa-arrow-circle-right"></i></a>
+                    <p class="description">Download or Watch Online :)</p><a class="action" href="/webseries/moneyheist/season2/index.html"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="seasons/seasonthree.html"><img class="img-fluid" src="assets/img/1-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="/webseries/moneyheist/season3/index.html"><img class="img-fluid" src="/assets/img/1-thumbnail.jpg"></a>
                     <h3 class="name">Season 3</h3>
-                    <p class="description">Download or Watch Online :)</p><a class="action" href="seasons/seasonthree.html"><i class="fa fa-arrow-circle-right"></i></a>
+                    <p class="description">Download or Watch Online :)</p><a class="action" href="/webseries/moneyheist/season3/index.html"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="seasons/seasonfour.html"><img class="img-fluid" src="assets/img/1-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="/webseries/moneyheist/season4/index.html"><img class="img-fluid" src="/assets/img/1-thumbnail.jpg"></a>
                     <h3 class="name">Season 4</h3>
-                    <p class="description">Download or Watch Online :)</p><a class="action" href="seasons/seasonfour.html"><i class="fa fa-arrow-circle-right"></i></a>
+                    <p class="description">Download or Watch Online :)</p><a class="action" href="/webseries/moneyheist/season4/index.html"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="seasons/seasonfivevone.html"><img class="img-fluid" src="assets/img/lcdpp3.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="/webseries/moneyheist/season5/index.html"><img class="img-fluid" src="/assets/img/lcdpp3.jpg"></a>
                     <h3 class="name">Season 5 Volume 1&nbsp;</h3>
-                    <p class="description">Download or Watch Online :)</p><a class="action" href="seasons/seasonfivevone.html"><i class="fa fa-arrow-circle-right"></i></a>
+                    <p class="description">Download or Watch Online :)</p><a class="action" href="/webseries/moneyheist/season5/index.html"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/lcdpp3.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="/assets/img/lcdpp3.jpg"></a>
                     <h3 class="name">Season 5 Volume 2</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="#"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
             </div>
         </div>
     </section>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/stylish-portfolio.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/js/stylish-portfolio.js"></script>
 </body>
 
 </html>
