--- a/webseries/moneyheist/season3/index.html
+++ b/webseries/moneyheist/season3/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Everythin</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="../assets/css/-Countdown-BS4-.css">
-    <link rel="stylesheet" href="../assets/css/Animated-CSS-Waves-Background-SVG.css">
-    <link rel="stylesheet" href="../assets/css/Animated-rainbow-shadow.css">
-    <link rel="stylesheet" href="../assets/css/Article-Dual-Column.css">
-    <link rel="stylesheet" href="../assets/css/Article-List.css">
-    <link rel="stylesheet" href="../assets/css/html5-video.css">
+    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="/assets/css/-Countdown-BS4-.css">
+    <link rel="stylesheet" href="/assets/css/Animated-CSS-Waves-Background-SVG.css">
+    <link rel="stylesheet" href="/assets/css/Animated-rainbow-shadow.css">
+    <link rel="stylesheet" href="/assets/css/Article-Dual-Column.css">
+    <link rel="stylesheet" href="/assets/css/Article-List.css">
+    <link rel="stylesheet" href="/assets/css/html5-video.css">
 </head>
 
 <body>
@@ -26,43 +26,43 @@
                 <p class="text-center">19 July 2019<br></p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/0qwvvbx83xnhhgp/S3_EP1.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/0qwvvbx83xnhhgp/S3_EP1.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 1</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/0qwvvbx83xnhhgp/S3_EP1.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/hdg9c65mv9785fc/S3_EP2.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/hdg9c65mv9785fc/S3_EP2.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 2</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/hdg9c65mv9785fc/S3_EP2.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/cmqryj1akuk04o8/S3_EP3.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/cmqryj1akuk04o8/S3_EP3.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 3</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/cmqryj1akuk04o8/S3_EP3.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/p1q2jsi6a0z16ey/S3_EP_4.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/p1q2jsi6a0z16ey/S3_EP_4.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 4</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/p1q2jsi6a0z16ey/S3_EP_4.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/8yf5ey3j007h2yd/S3_EP5.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/8yf5ey3j007h2yd/S3_EP5.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 5</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/8yf5ey3j007h2yd/S3_EP5.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/smtj9jvie3sjh4a/S3_EP6.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/smtj9jvie3sjh4a/S3_EP6.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 6</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/smtj9jvie3sjh4a/S3_EP6.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/ivswf5kq0vf1nt1/S3_EP7.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/ivswf5kq0vf1nt1/S3_EP7.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 7</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/ivswf5kq0vf1nt1/S3_EP7.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/mnkytnqtzl0djbl/S3_EP8.mp4/file"><img class="img-fluid" src="../assets/img/3-thumbnail.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="https://www.mediafire.com/file/mnkytnqtzl0djbl/S3_EP8.mp4/file"><img class="img-fluid" src="/assets/img/3-thumbnail.jpg"></a>
                     <h3 class="name">Episode 8</h3>
                     <p class="description">Download or Watch Online :)</p><a class="action" href="https://www.mediafire.com/file/mnkytnqtzl0djbl/S3_EP8.mp4/file"><i class="fa fa-arrow-circle-right"></i></a>
                 </div>
             </div>
         </div>
     </section>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/js/stylish-portfolio.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/js/stylish-portfolio.js"></script>
 </body>
 
 </html>
